--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,7 @@ body {
   background-color: var(--bg-secondary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-display: swap;
 }
 
 h1, h2, h3, h4, h5, h6 {
